--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -13,7 +13,7 @@
                 <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -24,7 +24,7 @@
                 <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -35,7 +35,7 @@
                 <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -46,7 +46,7 @@
                 <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="">
           </a>
         </div>
       </div>
