--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<header class="masthead d-flex">
-    <div class="container text-center my-auto">
+<header class="masthead d-flex" >
+    <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
         <h1 class="mb-1">CREATIVE OPTIMUM SOLUTION </h1>
         <h3 class="mb-5">
             <em>Graphic Designing - Illustration - Web Designer/ Development - Business Solutions</em>
