--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -2,46 +2,47 @@
     <div class="container">
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0">Services</h3>
-        <h2 class="mb-5">What We Offer</h2>
+        <h2 class="mb-5">We offer</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-screen-smartphone"></i>
+            <i class="fas fa-layer-group"></i>
           </span>
           <h4>
-            <strong>Responsive</strong>
+            <strong>Web Design</strong>
           </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p>
+          <p class="text-faded mb-0">Custom-made design looks phenomenal on any Device</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
           <h4>
-            <strong>Redesigned</strong>
+            <strong>Web development</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <p class="text-faded mb-0">Solution keen software engineers are at your service</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-like"></i>
+            <!-- <i class="icon-like"></i> -->
+            <i class="far fa-save"></i>
           </span>
           <h4>
-            <strong>Favorited</strong>
+            <strong>Data services</strong>
           </h4>
-          <p class="text-faded mb-0">Millions of users
+          <p class="text-faded mb-0">We can provide fab
             <i class="fas fa-heart"></i>
-            Start Bootstrap!</p>
+            data services with perfomance ready data systems</p>
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-mustache"></i>
+            <i class="fas fa-magic"></i>
           </span>
           <h4>
-            <strong>Question</strong>
+            <strong>Graphics</strong>
           </h4>
-          <p class="text-faded mb-0">I mustache you a question...</p>
+          <p class="text-faded mb-0">Our creative minds are always keen to get best for your business.</p>
         </div>
       </div>
     </div>
