--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,9 +2,9 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-          <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-            <a href="https://unsplash.com/">Unsplash</a>!</p>
+          <h2>"Technical advancement is not extravagance it's bare minimum!"</h2>
+          <p class="lead mb-5">We are just a new solution provider who will advance you in all the tearms wanna know which things you need to make your business fly.
+           </p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
         </div>
       </div>
