products services and logo home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,10 @@
 <header class="masthead d-flex" >
     <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
-        <h1 class="mb-1">CREATIVE OPTIMUM SOLUTION </h1>
-        <h3 class="mb-5">
-            <em>Graphic Designing - Illustration - Web Designer/ Development - Business Solutions</em>
-        </h3>
+        <img src="../../assets/img/cos-Black-bg.png" height="100"/>
+        <h1 class="mb-1" style="font-weight: 400; font-size: 5rem;">Creative Optimum Solution</h1>
+        <h5 class="mb-5" style="font-weight: 400;">
+            Graphic Designing - Illustration - Web Designer/ Development - Business Solutions
+        </h5>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
     <div class="overlay"></div>
