--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <ul class="list-inline mb-5">
       <li class="list-inline-item">
-        <a class="social-link rounded-circle text-white mr-3" href="#!">
+        <a class="social-link rounded-circle text-white mr-3" href="">
           <i class="icon-social-facebook"></i>
         </a>
       </li>
@@ -11,13 +11,13 @@
           <i class="icon-social-twitter"></i>
         </a>
       </li>
-      <li class="list-inline-item">
+      <!-- <li class="list-inline-item">
         <a class="social-link rounded-circle text-white" href="#!">
           <i class="icon-social-github"></i>
         </a>
-      </li>
+      </li> -->
     </ul>
-    <p class="text-muted small mb-0">Copyright &copy; Your Website 2020</p>
+    <p class="text-muted small mb-0">Copyright &copy; creative optimum solution 2021</p>
   </div>
 </footer>
 
