--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -2,15 +2,15 @@
     <div class="container">
       <div class="content-section-heading text-center">
         <h3 class="text-secondary mb-0">Products as service</h3>
-        <h2 class="mb-5">Deploy your products in less then 5 days</h2>
+        <h2 class="mb-5">Deploy your products in less then a week</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">E-commerce</div>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <div class="h2">E-commerce solutions</div>
+                <p class="mb-0">Empower your current Business or start a new one with online purchaching and delivery systems</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
@@ -20,8 +20,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Ice Cream</div>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <div class="h2">Invoicing and inventory</div>
+                <p class="mb-0">Manage your inventory to manage your inventory at any scale.</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
@@ -31,8 +31,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Strawberries</div>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <div class="h2">Restaurent solutions</div>
+                <p class="mb-0">Online ordering and resrvations sounds cool take your traditions one step further.</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="">
@@ -42,8 +42,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Workspace</div>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <div class="h2">Educational Solutions</div>
+                <p class="mb-0">Manage your student's informations and create performance charts.</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="">
