--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<app-navigation></app-navigation>
-<app-home></app-home>
-<app-about></app-about>
-<app-services></app-services>
-<app-portfolio></app-portfolio>
-<app-footer></app-footer>
+<app-page-home></app-page-home>
