-fix routing problem

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <h5 class="mb-5" style="font-weight: 400;">
             Graphic Designing - Illustration - Web Designer/ Development - Business Solutions
         </h5>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" routerLink="about">Find Out More</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" routerLink="/about">Find Out More</a>
     </div>
     <div class="overlay"></div>
 </header>
