--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,22 +5,25 @@
   <nav *ngIf="!isActive" id="sidebar-wrapper" class="active">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#">Creative Optimum Solution</a>
+        <a class="js-scroll-trigger"  routerLink="home">Creative Optimum Solution</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#page-top">Home</a>
+        <a class="js-scroll-trigger" routerLink="home">Home</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">About</a>
+        <a class="js-scroll-trigger" routerLink="about">About</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
+        <a class="js-scroll-trigger" routerLink="services">Services</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+        <a class="js-scroll-trigger" routerLink="products">Our Products</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
+        <a class="js-scroll-trigger" routerLink="pricing">Pricings</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" routerLink="Contact">Contact Us</a>
       </li>
     </ul>
   </nav>
