new product page design

--- a/src/app/page-products/page-products.component.html
+++ b/src/app/page-products/page-products.component.html
@@ -1,1 +1,59 @@
-<p>page-products works!</p>
+<header class="masthead d-flex" style="background:url(../../assets/img/banners/3.png);background-image:  no-repeat;background-position:  center;background-attachment: fixed; background-size: cover;">
+    <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
+        <h3 class="mb-1" style="font-weight: 400; font-size: 3rem;">Have a look at our products</h3>
+        <h5 class="mb-5" style="font-weight: 400;">
+            All solutions ready to deploy within a week 
+        </h5>
+    </div>
+    <div class="overlay"></div>
+</header>
+<section class="content-section" id="portfolio">
+    <div class="container">
+      <div class="row no-gutters">
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#!">
+            <div class="caption">
+              <div class="caption-content">
+                <div class="h2">E-commerce solutions</div>
+                <p class="mb-0">Empower your current Business or start a new one with online purchaching and delivery systems</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#!">
+            <div class="caption">
+              <div class="caption-content">
+                <div class="h2">Invoicing and inventory</div>
+                <p class="mb-0">Manage your inventory to manage your inventory at any scale.</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#!">
+            <div class="caption">
+              <div class="caption-content">
+                <div class="h2">Restaurent solutions</div>
+                <p class="mb-0">Online ordering and resrvations sounds cool take your traditions one step further.</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#!">
+            <div class="caption">
+              <div class="caption-content">
+                <div class="h2">Educational Solutions</div>
+                <p class="mb-0">Manage your student's informations and create performance charts.</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
