--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -1,1 +1,9 @@
-<p>page-about works!</p>
+<header class="masthead d-flex">
+    <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
+        <h3 class="mb-1" style="font-weight: 400; font-size: 3rem;">About Us</h3>
+        <h5 class="mb-5" style="font-weight: 400;">
+            Know our story!
+        </h5>
+    </div>
+    <div class="overlay"></div>
+</header>
