--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -20,6 +20,9 @@
         <a class="js-scroll-trigger" routerLink="products">Our Products</a>
       </li>
       <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" routerLink="GraphicsDisplay">Graphics Display</a>
+      </li>
+      <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" routerLink="pricing">Pricings</a>
       </li>
       <li class="sidebar-nav-item">
