Updates in design

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,7 +5,7 @@
           <h2>"Technical advancement is not extravagance it's bare minimum!"</h2>
           <p class="lead mb-5">We are just a new solution provider who will advance you in all the tearms wanna know which things you need to make your business fly.
            </p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="/services">What We Offer</a>
+          <!-- <a class="btn btn-dark btn-xl js-scroll-trigger" href="/services">What We Offer</a> -->
         </div>
       </div>
     </div>
