--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <header class="masthead d-flex" >
-    <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
-        <img src="../../assets/img/cos-Black-bg.png" height="100"/>
-        <h1 class="mb-1" style="font-weight: 400; font-size: 5rem;">Creative Optimum Solution</h1>
+    <div class="container text-center my-auto" style=" padding-right: 4%;padding-left: 4%;    padding-bottom: 2%;background: #f8f9fabf;padding-top: 4%;    color: #2a809f;    height: fit-content;    width: fit-content;">
+        <!-- <img src="../../assets/img/cos-Black-bg.png" height="100"/>
+        <h1 class="mb-1" style="font-weight: 400; font-size: 5rem;">Creative Optimum Solution</h1>  -->
         <h5 class="mb-5" style="font-weight: 400;">
-            Graphic Designing - Illustration - Web Designer/ Development - Business Solutions
+            Graphic Designing - Illustration - Web Design/ Development - Business Solutions
         </h5>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" routerLink="/about">Find Out More</a>
+        <!-- <a class="btn btn-primary btn-xl js-scroll-trigger" routerLink="/about">Find Out More</a> -->
     </div>
     <div class="overlay"></div>
 </header>
