--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -1,9 +1,7 @@
-<header class="masthead d-flex">
-    <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
-        <h3 class="mb-1" style="font-weight: 400; font-size: 3rem;">CONTACT US</h3>
-        <h5 class="mb-5" style="font-weight: 400;">
-            Talk to us or leave a feedback  
-        </h5>
+  <header class="my-masthead d-flex" >
+    <div class="container text-center my-auto" style="color: #2a809f;">
+        <h1 class="mb-1">Contact Us</h1>
+        Talk to us or leave a feedback  
     </div>
-    <div class="overlay"></div>
 </header>
+  
