--- a/src/app/page-products/page-products.component.html
+++ b/src/app/page-products/page-products.component.html
@@ -1,12 +1,11 @@
-<header class="masthead d-flex" style="background:url(../../assets/img/banners/3.png);background-image:  no-repeat;background-position:  center;background-attachment: fixed; background-size: cover;">
-    <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
-        <h3 class="mb-1" style="font-weight: 400; font-size: 3rem;">Our Products</h3>
-        <h5 class="mb-5" style="font-weight: 400;">
-            All solutions ready to deploy within a week 
-        </h5>
-    </div>
-    <div class="overlay"></div>
+<header class="my-masthead d-flex" >
+  <div class="container text-center my-auto" style="color: #2a809f;">
+      <h1 class="mb-1">Our Products</h1>
+      All solutions ready to deploy within a week 
+  </div>
 </header>
+
+
 <section class="content-section" id="portfolio">
     <div class="container">
       <div class="row no-gutters">
