--- a/src/app/page-pricing/page-pricing.component.html
+++ b/src/app/page-pricing/page-pricing.component.html
@@ -1,9 +1,20 @@
-<header class="masthead d-flex" >
-    <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
-        <h3 class="mb-1" style="font-weight: 400; font-size: 3rem;">Pricings</h3>
-        <h5 class="mb-5" style="font-weight: 400;">
-            Budget always matters. 
-        </h5>
-    </div>
-    <div class="overlay"></div>
+<header class="my-masthead d-flex" >
+  <div class="container text-center my-auto" style="color: #2a809f;">
+      <h1 class="mb-1">Pricings</h1>
+      Budget always matters.  
+  </div>
 </header>
+
+
+<section class="content-section bg-light" id="about">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-10 mx-auto">
+          <h2>"Technical advancement is not extravagance it's bare minimum!"</h2>
+          <p class="lead mb-5">We are just a new solution provider who will advance you in all the tearms wanna know which things you need to make your business fly.
+           </p>
+          <!-- <a class="btn btn-dark btn-xl js-scroll-trigger" href="/services">What We Offer</a> -->
+        </div>
+      </div>
+    </div>
+  </section>
