--- a/src/app/page-services/page-services.component.html
+++ b/src/app/page-services/page-services.component.html
@@ -1,9 +1,8 @@
-<header class="masthead d-flex">
-    <div class="container text-center my-auto" style="background: #f8f9fabf;padding: 40px;color: #2a809f;">
-        <h3 class="mb-1" style="font-weight: 400; font-size: 3rem;">Our Services</h3>
-        <h5 class="mb-5" style="font-weight: 400;">
-            What is your expectations. 
-        </h5>
+  <header class="my-masthead d-flex" >
+    <div class="container text-center my-auto" style="color: #2a809f;">
+        <h1 class="mb-1">Our Services</h1>
+        What are your expectations. 
     </div>
-    <div class="overlay"></div>
-</header>
+  </header>
+  
+  
