--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -10,9 +10,9 @@
             <i class="fas fa-layer-group"></i>
           </span>
           <h4>
-            <strong>Web Design</strong>
+            <strong>UX/UI Solutions</strong>
           </h4>
-          <p class="text-faded mb-0">Custom-made design looks phenomenal on any Device</p>
+          <p class="text-faded mb-0">Custom-made ,vibrent and clean and yet responsive web designs</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
