--- a/src/app/page-products/page-products.component.html
+++ b/src/app/page-products/page-products.component.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" href="http://merch4creators.com/" target="_blank">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">E-commerce solutions</div>
