--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -9,8 +9,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">E-commerce solutions</div>
-                <p class="mb-0">Empower your current Business or start a new one with online purchaching and delivery systems</p>
+                <div class="h2">COS E-commerce</div>
+                <p class="mb-0">To help you grow in your Business or start a new one with online purchaching and delivery systems please take a look at our E-commerce portal</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="">
@@ -20,8 +20,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Invoicing and inventory</div>
-                <p class="mb-0">Manage your inventory to manage your inventory at any scale.</p>
+                <div class="h2">I & I Management</div>
+                <p class="mb-0">To manage your small business you don't need to buy enterprise level ERPs.</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="">
@@ -31,8 +31,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Restaurent solutions</div>
-                <p class="mb-0">Online ordering and resrvations sounds cool take your traditions one step further.</p>
+                <div class="h2">Restaurents and Resrvations</div>
+                <p class="mb-0">Online ordering and resrvations sounds cool? Take your traditions one step further.</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="">
@@ -42,8 +42,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Educational Solutions</div>
-                <p class="mb-0">Manage your student's informations and create performance charts.</p>
+                <div class="h2">Assesment helper</div>
+                <p class="mb-0">Help build future generation by letting them understand their learnings.</p>
               </div>
             </div>
             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="">
