--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -10,18 +10,18 @@
             <i class="fas fa-layer-group"></i>
           </span>
           <h4>
-            <strong>UX/UI Solutions</strong>
+            <strong>Frontend development</strong>
           </h4>
-          <p class="text-faded mb-0">Custom-made ,vibrent and clean and yet responsive web designs</p>
+          <p class="text-faded mb-0">We deliver reusable,clean and custom-made designs using Angular which delivers effortless, swift and filled with required functionalities.</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
           <h4>
-            <strong>Web development</strong>
+            <strong>Web applications</strong>
           </h4>
-          <p class="text-faded mb-0">Solution keen software engineers are at your service</p>
+          <p class="text-faded mb-0">Our creative minds allows us to develop custom-made, scalable and full stackable web applications using API creation to fullfil your flexible business needs.</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -31,18 +31,17 @@
           <h4>
             <strong>Data services</strong>
           </h4>
-          <p class="text-faded mb-0">We can provide fab
-            <i class="fas fa-heart"></i>
-            data services with perfomance ready data systems</p>
+          <p class="text-faded mb-0">We achieve insights of your business using database/ analysis tools to provide data analysis, ETL and small scale conversions.</p>
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="fas fa-magic"></i>
           </span>
           <h4>
-            <strong>Graphics</strong>
+            <strong>Integrated development</strong>
           </h4>
-          <p class="text-faded mb-0">Our creative minds are always keen to get best for your business.</p>
+          <p class="text-faded mb-0">We can provide use of multiple platform development without changing your identity by integrating cross platforn tools and technologies.
+          </p>
         </div>
       </div>
     </div>
