--- a/src/assets/css/stylish-portfolio.css
+++ b/src/assets/css/stylish-portfolio.css
@@ -123,7 +123,7 @@ h6 {
   height: 100%;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background: #1D809F;
+  background: #7e5050;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 
