Updates Brown Theme

--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -1,5 +1,5 @@
 <header class="my-masthead d-flex" >
-    <div class="container text-center my-auto" style="color: #2a809f;">
+    <div class="container text-center my-auto" style="color: #7e5050;">
         <h1 class="mb-1">About Us</h1>
         Know our story!
     </div>
