--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,9 +1,14 @@
-<section class="content-section" id="portfolio">
+<section class="content-section " style="color: #7e5050 !important;" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
+        <h3 class="mb-0">
+        <h2 class="mb-5">Products as service</h2>
+        </h3>
+      </div>
+      <!-- <div class="content-section-heading text-center">
         <h3 class="text-secondary mb-0">Products as service</h3>
         <h2 class="mb-5">Deploy your products in less then a week</h2>
-      </div>
+      </div> -->
       <div class="row no-gutters">
         <div class="col-lg-6">
           <a class="portfolio-item" href="#!">
