--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <header class="masthead d-flex" >
-    <div class="container text-center my-auto" style=" padding-right: 4%;padding-left: 4%;padding-bottom: 2%;background: #f8f9fabf;padding-top: 4%;    color: #2a809f;    height: fit-content;    width: fit-content;">
-        <h5 class="mb-5" style="font-weight: 400;">
-            Web Development Solutions - Business software Solutions - Data Analysis Solutions
-        </h5>
+    <div class="container text-center my-auto" style=" padding-right: 4%;padding-left: 4%;padding-bottom: 2%;background: #f8f9fabf;padding-top: 4%;font-weight: bolder;    color: #7e5050!important;    height: fit-content;    width: fit-content;">
+        <h3 class="mb-5" >
+            Web Development Solutions 
+            | Business software Solutions
+            | Data Analysis Solutions
+        </h3>
     </div>
