--- a/src/app/page-services/page-services.component.css
+++ b/src/app/page-services/page-services.component.css
@@ -1,5 +1,5 @@
     .my-masthead{
-        background-color: rgb(215, 250, 245);
+        background-color:antiquewhite;
         height: 15%;
         }
     
