--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,8 +1,9 @@
 <section class="content-section bg-primary text-white text-center" id="services">
     <div class="container">
       <div class="content-section-heading">
-        <h3 class="text-secondary mb-0">Services</h3>
-        <h2 class="mb-5">We offer</h2>
+        <h3 class="mb-0">
+        <h2 class="mb-5">Services</h2>
+        </h3>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
