--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -2,6 +2,7 @@
     <div class="container text-center my-auto" style="color: #2a809f;">
         <h1 class="mb-1">Contact Us</h1>
         Talk to us or leave a feedback  
+        <app-contact></app-contact>
     </div>
 </header>
   
