About Page contents

--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -30,7 +30,8 @@ The solution is a process of development with a depth of necessity, analytics, a
                 We had started this company with the idea of resolving problems in every industry. Trust and honesty are foundations for our  "Creative Optimum Solution" as they define our intentions to the client's confidentiality.
                 
             </p>
-            <b class="lead" style="font-weight: 700;">The name originated with  approaches to solve problems:</b>
+            <h3 class="text-center">Our Brand Ethics </h3>
+            <!-- <b class="lead" style="font-weight: 700;">The name originated with  approaches to solve problems:</b> -->
             <br /><br />
             <h3> Creative:</h3>
             <p class="lead mb-5  ">
@@ -46,8 +47,9 @@ The solution is a process of development with a depth of necessity, analytics, a
                 The solution is a process of development with a depth of necessity, analytics, and future growth of your business. We use multiple critical thinking tools to develop robust solutions for your business.    
             </p>
             <br><br>
-            <hr>
+            
             <h3 class="text-center">Our Environment</h3>
+            <hr>
             <p class="lead mb-5  ">
                     We encourage growth environment with thorough understanding and experienced individuals which gives us realistic and creative approach to satisfy our client's needs.  
                 </p>
@@ -58,11 +60,14 @@ The solution is a process of development with a depth of necessity, analytics, a
                 To grow, we encourage our team to learn new technologies and tools. We also love to migrate from old technologies to new trending technologies to reveal new opportunities and continuous advancement in the industry. 
             </p>
             <br><br>
-            <hr>
-            <h3 class="text-center">Our Tech space</h3>
             
+            <h3 class="text-center">Our Tech space</h3>
+            <hr>
                 <div class="row">
             <div class="col-md-3">
+                <span class="text-center service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-layer-group"></i>
+                  </span>
                 <h3>
                     Development
                     </h3>
@@ -72,6 +77,9 @@ The solution is a process of development with a depth of necessity, analytics, a
             </div>
 
             <div class="col-md-3">
+                <span class="text-center service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-layer-group"></i>
+                  </span>
                 <h3>
                     Web Design
                     </h3>
@@ -81,6 +89,9 @@ The solution is a process of development with a depth of necessity, analytics, a
             </div>
 
             <div class="col-md-3">
+                <span class="text-center service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-layer-group"></i>
+                  </span>
                 <h3>
                     API Cretion
                     </h3>
@@ -89,6 +100,9 @@ The solution is a process of development with a depth of necessity, analytics, a
                     </p>
             </div>
             <div class="col-md-3">
+                <span class="text-center service-icon rounded-circle mx-auto mb-3">
+                    <i class="fas fa-layer-group"></i>
+                  </span>
                 <h3>
                     Data analysis
                     </h3>
