--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -1,118 +1,130 @@
-<header class="my-masthead d-flex" >
+<header class="my-masthead d-flex">
     <div class="container text-center my-auto" style="color: #7e5050;">
         <h1 class="mb-1">About Us</h1>
-        Know us from Stones to satellites 
+        Know us from Stones to satellites
     </div>
     <div class="overlay"></div>
 </header>
-<!-- 
-    We are tech enthusiasts who provide services and extensions to your business using technology and data. 
-We had started this company with the idea of resolving problems in every industry. Trust and honesty are foundations for our  "Creative Optimum Solution" as they define our intentions to the client's confidentiality.
- The name originated with an approach to solve the problem:
-Creative:
-Creativity is our pivotal approach for solving problems. We follow Agile methodology to report the productions because it traditionally allows other organizations to collaborate flexibly. We provide out-of-the-box solutions which can make your business stand out in the queue. 
-Optimum:
-As our solutions are optimistic, we can provide you with the information for the problem in every step, so you don't need to rely on us. We design and document the solution for future uses.
-Solution:
-The solution is a process of development with a depth of necessity, analytics, and future growth of your business. We use multiple critical thinking tools to develop robust solutions for your business.
- -->
-  
- <section class="content-section bg-light" id="about">
+<div class="container text-center">
+    <img src="../../assets/img/Banners/about.png" alt=" Trust | Growth | Honesty">
+</div>
+<section class="content-section" id="about">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-10 mx-auto">
-            <p class="lead">
-                We are solution provider understood the growth in every aspect of the technology to make business from screach. We are group of remakeable people who developed our intrest in IT field to encourage other industries grow advancing their technical knowledge.  
-             </p>
-            <h2  class="text-center"> " We are tech enthusiasts who provide services and extensions to your business using technology and data."</h2>
-            <p class="lead mb-5  ">
-                We are tech enthusiasts who provide services and extensions to your business using technology and data. 
-                We had started this company with the idea of resolving problems in every industry. Trust and honesty are foundations for our  "Creative Optimum Solution" as they define our intentions to the client's confidentiality.
-                
-            </p>
-            <h3 class="text-center">Our Brand Ethics </h3>
-            <!-- <b class="lead" style="font-weight: 700;">The name originated with  approaches to solve problems:</b> -->
-            <br /><br />
-            <h3> Creative:</h3>
-            <p class="lead mb-5  ">
-                Creativity is our pivotal approach for solving problems. We follow Agile methodology to report the productions because it traditionally allows other organizations to collaborate flexibly. We provide out-of-the-box solutions which can make your business stand out in the queue.   
-            </p>
+        <div class="row">
+            <div class="col-lg-10 mx-auto">
+                <p class="lead">
+                    We are solution provider understood the growth in every aspect of the technology to make business
+                    from screach. We are group of remakeable people who developed our intrest in IT field to encourage
+                    other industries grow advancing their technical knowledge.
+                </p>
+                <h2 class="text-center text-brown"> " We are tech enthusiasts who provide services and extensions to
+                    your business
+                    using technology and data."</h2>
+                <p class="lead mb-5">
+                    We are tech enthusiasts who provide services and extensions to your business using technology and
+                    data.
+                    We had started this company with the idea of resolving problems in every industry. Trust and honesty
+                    are foundations for our "Creative Optimum Solution" as they define our intentions to the client's
+                    confidentiality.
 
-            <h3>Optimum:</h3>
-            <p class="lead mb-5  ">
-                As our solutions are optimistic, we can provide you with the information for the problem in every step, so you don't need to rely on us. We design solution and document and log them to provide clear picture of the solution space.
-            </p>
-            <h3>Solution:</h3>
-            <p class="lead mb-5  ">
-                The solution is a process of development with a depth of necessity, analytics, and future growth of your business. We use multiple critical thinking tools to develop robust solutions for your business.    
-            </p>
-            <br><br>
-            
-            <h3 class="text-center">Our Environment</h3>
-            <hr>
-            <p class="lead mb-5  ">
-                    We encourage growth environment with thorough understanding and experienced individuals which gives us realistic and creative approach to satisfy our client's needs.  
+                </p>
+                <div class="bg-light">
+                    <!-- <h3 class="text-center">Our Brand Ethics </h3> -->
+                    <h3> Creative</h3>
+                    <p class="lead mb-5  ">
+                        Creativity is our pivotal approach for solving problems. We follow Agile methodology to report
+                        the
+                        productions because it traditionally allows other organizations to collaborate flexibly. We
+                        provide
+                        out-of-the-box solutions which can make your business stand out in the queue.
+                    </p>
+
+                    <h3>Optimum</h3>
+                    <p class="lead mb-5  ">
+                        As our solutions are optimistic, we can provide you with the information for the problem in
+                        every
+                        step, so you don't need to rely on us. We design solution and document and log them to provide
+                        clear
+                        picture of the solution space.
+                    </p>
+                    <h3>Solution</h3>
+                    <p class="lead mb-5  ">
+                        The solution is a process of development with a depth of necessity, analytics, and future growth
+                        of
+                        your business. We use multiple critical thinking tools to develop robust solutions for your
+                        business.
+                    </p>
+                </div>
+
+                <h3 class="text-center">Our Environment</h3>
+                <p class="lead mb-5  ">
+                    We encourage growth environment with thorough understanding and experienced individuals which gives
+                    us realistic and creative approach to satisfy our client's needs.
                 </p>
                 <h3>
-                        Growth:
+                    Growth
                 </h3>
-            <p class="lead mb-5">
-                To grow, we encourage our team to learn new technologies and tools. We also love to migrate from old technologies to new trending technologies to reveal new opportunities and continuous advancement in the industry. 
-            </p>
-            <br><br>
-            
-            <h3 class="text-center">Our Tech space</h3>
-            <hr>
-                <div class="row">
-            <div class="col-md-3">
-                <span class="text-center service-icon rounded-circle mx-auto mb-3">
-                    <i class="fas fa-layer-group"></i>
-                  </span>
-                <h3>
-                    Development
-                    </h3>
-                    <p class="lead mb-5">
-                    We deliver development in C#, PHP, Angular, Node js, React Js and Android. 
-                    </p>
-            </div>
+                <p class="lead mb-5">
+                    To grow, we encourage our team to learn new technologies and tools. We also love to migrate from old
+                    technologies to new trending technologies to reveal new opportunities and continuous advancement in
+                    the industry.
+                </p>
+                <br><br>
+                <div class="bg-light">
+                    <!-- <h3 class="text-center ">Our Tech</h3> -->
+                    <div class="row">
+                        <div class="col-md-3 text-center">
+                            <span class="service-icon rounded-circle mx-auto mb-3">
+                                <!-- <i class="fab fa-atlassian"></i> -->
+                                <i class="fas fa-laptop-code"></i>
+                            </span>
+                            <h3 class="text-brown">
+                                Development
+                            </h3>
+                            <p class="lead mb-5">
+                                We deliver development in C#, PHP, Angular, Node js, React Js and Android.
+                            </p>
+                        </div>
 
-            <div class="col-md-3">
-                <span class="text-center service-icon rounded-circle mx-auto mb-3">
-                    <i class="fas fa-layer-group"></i>
-                  </span>
-                <h3>
-                    Web Design
-                    </h3>
-                    <p class="lead mb-5">
-                    We deliver web designing using Matirialize, Bootstrep, Angular, HTML, JS, and CSS. 
-                    </p>
-            </div>
+                        <div class="col-md-3  text-center">
+                            <span class=" service-icon rounded-circle mx-auto mb-3">
+                                <i class="fas fa-layer-group"></i>
+                            </span>
+                            <h3 class="text-brown">
+                                Web Design
+                            </h3>
+                            <p class="lead mb-5">
+                                We deliver web designing using Matirialize, Bootstrep, Angular, HTML, JS, and CSS.
+                            </p>
+                        </div>
 
-            <div class="col-md-3">
-                <span class="text-center service-icon rounded-circle mx-auto mb-3">
-                    <i class="fas fa-layer-group"></i>
-                  </span>
-                <h3>
-                    API Cretion
-                    </h3>
-                    <p class="lead mb-5">
-                    We create APIs for Payment gateways, SMS inegration and Seek Job platform. 
-                    </p>
+                        <div class="text-center col-md-3">
+                            <span class=" service-icon rounded-circle mx-auto mb-3">
+                                <!-- <i class="fas fa-layer-group"></i> -->
+                                <i class="fas fa-archway"></i>
+                            </span>
+                            <h3 class="text-brown">
+                                API Cretion
+                            </h3>
+                            <p class="lead mb-5">
+                                We create APIs for Payment gateways, SMS inegration and Seek Job platform.
+                            </p>
+                        </div>
+                        <div class="text-center col-md-3">
+                            <span class=" service-icon rounded-circle mx-auto mb-3">
+                                <!-- <i class="fas fa-layer-group"></i> -->
+                                <i class="fas fa-poll"></i>
+                            </span>
+                            <h3 class="text-brown">
+                                Data analysis
+                            </h3>
+                            <p class="lead mb-5">
+                                We analyze data using Python, R, Power BI, Tableau and Google analytics.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3">
-                <span class="text-center service-icon rounded-circle mx-auto mb-3">
-                    <i class="fas fa-layer-group"></i>
-                  </span>
-                <h3>
-                    Data analysis
-                    </h3>
-                    <p class="lead mb-5">
-                    We analyze data using Python, R, Power BI, Tableau and Google analytics. 
-                    </p>
-            </div>
-</div>
-
         </div>
-      </div>
     </div>
-  </section>
+</section>
