--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,13 @@
-<section class="content-section bg-light" style="color: #912e30!important;" id="about">
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-lg-10 mx-auto">
-          <h2>"Technical advancement is not extravagance it's bare minimum!"</h2>
-          <p class="lead mb-5" style="font-weight: 400;">We are just a new solution provider who will advance you in all the tearms wanna know which things you need to make your business fly.
-           </p>
-          <!-- <a class="btn btn-dark btn-xl js-scroll-trigger" href="/services">What We Offer</a> -->
-        </div>
+<section class="content-section bg-light color-red" id="about">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-lg-10 mx-auto">
+        <h2>"Technical advancement is not extravagance it's bare minimum!"</h2>
+        <p class="lead mb-5" style="font-weight: 400;">We are just a new solution provider who will advance you in all
+          the tearms wanna know which things you need to make your business fly.
+        </p>
+        <a class="btn btn-brown btn-xl js-scroll-trigger" routerLink="/about">Know Us</a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
