--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,49 +1,50 @@
 <section class="content-section bg-primary text-white text-center" id="services">
-    <div class="container">
-      <div class="content-section-heading">
-        <h3 class="mb-0">
+  <div class="container">
+    <div class="content-section-heading">
+      <h3 class="mb-0">
         <h2 class="mb-5">Services</h2>
-        </h3>
+      </h3>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+        <span class="service-icon rounded-circle mx-auto mb-3">
+          <i class="fas fa-laptop-code"></i>
+        </span>
+        <h4>
+          <strong>Web development</strong>
+        </h4>
+        <p class="text-faded mb-0">Our creative minds allow us to develop custom-made, scalable, and full stackable web applications using API creation to fulfill your flexible business needs.</p>
       </div>
-      <div class="row">
-        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-          <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="fas fa-layer-group"></i>
-          </span>
-          <h4>
-            <strong>Frontend development</strong>
-          </h4>
-          <p class="text-faded mb-0">We deliver reusable,clean and custom-made designs using Angular which delivers effortless, swift and filled with required functionalities.</p>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-          <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-pencil"></i>
-          </span>
-          <h4>
-            <strong>Web applications</strong>
-          </h4>
-          <p class="text-faded mb-0">Our creative minds allows us to develop custom-made, scalable and full stackable web applications using API creation to fullfil your flexible business needs.</p>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-          <span class="service-icon rounded-circle mx-auto mb-3">
-            <!-- <i class="icon-like"></i> -->
-            <i class="far fa-save"></i>
-          </span>
-          <h4>
-            <strong>Data services</strong>
-          </h4>
-          <p class="text-faded mb-0">We achieve insights of your business using database/ analysis tools to provide data analysis, ETL and small scale conversions.</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-          <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="fas fa-magic"></i>
-          </span>
-          <h4>
-            <strong>Integrated development</strong>
-          </h4>
-          <p class="text-faded mb-0">We can provide use of multiple platform development without changing your identity by integrating cross platforn tools and technologies.
-          </p>
-        </div>
+      <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+        <span class="service-icon rounded-circle mx-auto mb-3">
+          <i class="fas fa-layer-group"></i>
+        </span>
+        <h4>
+          <strong> Web Design </strong>
+        </h4>
+        <p class="text-faded mb-0">We deliver reusable, scalable, clean, and custom-made designs using Angular to deliver an effortless and swift user experience.</p>
+      </div>
+
+
+      <div class="col-lg-3 col-md-6">
+        <span class="service-icon rounded-circle mx-auto mb-3">
+          <i class="fas fa-archway"></i>
+        </span>
+        <h4>
+          <strong>Cross Platform API</strong>
+        </h4>
+        <p class="text-faded mb-0">We can provide multiple platform development without changing your identity by integrating cross-platform tools and technologies in your current applications.</p>
+      </div>
+      <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+        <span class="service-icon rounded-circle mx-auto mb-3">
+          <i class="fas fa-poll"></i>
+
+        </span>
+        <h4>
+          <strong>Data Analysis</strong>
+        </h4>
+        <p class="text-faded mb-0">We can provide insights into your business using database/ analysis tools to provide business hypotheses, data analysis, ETL, and small-scale conversions.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
